[gd_scene load_steps=2 format=3 uid="uid://b6vsdmywkrf25"]

[ext_resource type="Script" path="res://src/Levels/UIManager.gd" id="1_m2gkh"]

[node name="UIManager" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_m2gkh")

[node name="ScoreText" type="RichTextLabel" parent="."]
offset_right = 103.0
offset_bottom = 24.0
scale = Vector2(0.5, 0.5)
text = "Placeholder"

[node name="LevelProgressBar" type="ProgressBar" parent="."]
offset_top = 14.0
offset_right = 63.0
offset_bottom = 41.0
scale = Vector2(0.5, 0.5)

[node name="EndGameText" type="RichTextLabel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
